// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Navigation|NavMenu closed 1`] = `
<div>
  <div>
    <ul
      className="MuiList-root MuiList-padding"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        className="NavMenu-drawerHeader"
        key=".0"
        onFocus={[Function]}
        tabIndex={0}
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current="page"
        className="withRouter(NavMenuItem)-nav withRouter(NavMenuItem)-activeNav"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Home
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/auctions/new"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiButtonBase-disabled MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-disabled MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Create Auction
            </span>
          </div>
        </li>
      </a>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/rules"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Rules
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/about"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              About
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Navigation|NavMenu logged in 1`] = `
<div>
  <div>
    <ul
      className="MuiList-root MuiList-padding"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        className="NavMenu-drawerHeader"
        key=".0"
        onFocus={[Function]}
        tabIndex={0}
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current="page"
        className="withRouter(NavMenuItem)-nav withRouter(NavMenuItem)-activeNav"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Home
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/auctions/new"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Create Auction
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/rules"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Rules
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/about"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              About
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Navigation|NavMenu not logged in 1`] = `
<div>
  <div>
    <ul
      className="MuiList-root MuiList-padding"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        className="NavMenu-drawerHeader"
        key=".0"
        onFocus={[Function]}
        tabIndex={0}
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
              />
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current="page"
        className="withRouter(NavMenuItem)-nav withRouter(NavMenuItem)-activeNav"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Home
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/auctions/new"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiButtonBase-disabled MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-disabled MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Create Auction
            </span>
          </div>
        </li>
      </a>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/rules"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Rules
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={null}
        className="withRouter(NavMenuItem)-nav"
        href="/about"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              About
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
    </ul>
  </div>
</div>
`;
